-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.353 2008-11-18 00:11:31 guru Exp $
-----------------------------------------------------------------------------------------
2008-11-17	pwessel
	* psscale.c:		When -I and -Li was used we did not draw box outlines.
	* ps2raster.c:		New format -Tb for MicroSoft BMP output.  Also, formats
				b, g, j, and t accept modifier '-' to produce grayscale
				images.  Finally, added -Cgs-command to add one or more
				custom switches to ghostscript, and -Q[g|t]<bits> to
				set the level of anti-aliasing for graphics and text.
2008-11-14	pwessel
	* ps2raster.c:		New format -TG turns on transparency for PNG output.
	
2008-11-13	pwessel
	* psxy[z].c:		New option -I<intens> to modulate fill color via illumination.

2008-11-02	pwessel
	* spotter/backtracker.c:	New option -e to specify a single fixed total
				reconstruction rotation to apply to all input points.
				
2008-10-17	pwessel
	* xyz2grd.c:		New format (A) for -Z which allows more than one floating
				point value per input record.  Cannot be used if the z-
				values are in dateTclock or ddd:mm:ss format.
2008-10-14	pwessel
	* xgrid/xGridEdit.c:	Needs GMT_io_init to get all pieces needed to read grids.

2008-10-10	pwessel
	* x2sys.c:		Can now also handle netCDF 1-D COARDS files.
	* psbasemap.c		The -L syntax and description was out of date regarding
				how the options are to be specified.  Added new syntax
				explain functions for both map scale and map rose so these
				are consistently described for both psbasemap and pscoast.
				Also corrected the syntax and description in the man pages.
2008-10-08	remko
	* gmtmath.c:		Added INRANGE operator. Was added to grdmath on 2004-03-28,
				but was not available to gmtmath.

2008-10-06	pwessel
	* x2sys/x2sys_datalist.c:	Now has [experimental] support for using a correction
				table and can compute auxiliary data such as distance and az.